--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "bower": "~1.3.5",
-    "mongodb": "~1.4.7"
+    "mongodb": "~1.4.7",
+    "mocha": "~1.20.1"
   }
 }
