frontend do grafico por sexo ok; rotas basicas ok; model e config mongo ok; server ok;

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chartjs": "~0.2.0",
     "requirejs": "~2.1.14",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "c3": "~0.3.0"
   }
 }
