--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "bower": "~1.3.5",
-    "mongodb": "~1.4.7",
-    "mocha": "~1.20.1"
+    "mocha": "~1.20.1",
+    "mongoose": "~3.8.16",
+    "async": "~0.9.0"
   }
 }
