--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bower": "~1.3.5",
     "mocha": "~1.20.1",
     "mongoose": "~3.8.16",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "underscore": "~1.7.0"
   }
 }
