--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "mocha": "~1.20.1",
     "mongoose": "~3.8.16",
     "async": "~0.9.0",
-    "underscore": "~1.7.0"
+    "lodash": "~2.4.1"
   }
 }
